--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,16 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-top-app-bar></app-top-app-bar>
 
 <ion-content padding>
+  <div class="mdc-top-app-bar--fixed-adjust">
   The world is your oyster.
   <p>If you get lost, the
     <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  </div>
 </ion-content>
