--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,10 @@
-<app-top-app-bar></app-top-app-bar>
+<app-top-app-bar [title]="'LocalList'" type=""></app-top-app-bar>
 
 <ion-content padding>
   <div class="mdc-top-app-bar--fixed-adjust">
-  The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
   </div>
+
+  <button class="mdc-fab app-add-new-fab" (click)="addNewGroup()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+  </button>
 </ion-content>
