--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,1 @@
-<p>
-  map works!
-</p>
+<div id="map_canvas" class="map" style="height: 100%; width: 100%; min-height: 200px; min-width: 200px;"></div>
