Init database roundtrip

--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -5,5 +5,5 @@
 </app-top-app-bar>
 
 <ion-content padding>
-  <app-edit-view></app-edit-view>
+  <app-edit-view [group]="group"></app-edit-view>
 </ion-content>
