--- a/src/app/edit-view/edit-view.component.html
+++ b/src/app/edit-view/edit-view.component.html
@@ -1,11 +1,11 @@
 <div class="edit-view-container mdc-top-app-bar--fixed-adjust">
   <div class="edit-view-map">
-    <app-map style="min-height: 200px;"></app-map>
+    <!--<app-map style="min-height: 200px;"></app-map>-->
   </div>
   <div class="edit-view-content">
 
     <div class="mdc-text-field mdc-text-field--outlined edit-view-textfield">
-      <input class="mdc-text-field__input" type="text" id="uaqvbIDc4">
+      <input class="mdc-text-field__input" type="text" id="uaqvbIDc4" [(ngModel)]="group.title">
       <label class="mdc-floating-label" for="uaqvbIDc4">Title</label>
       <div class="mdc-notched-outline"><svg>
         <path class="mdc-notched-outline__path"></path>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="mdc-text-field mdc-text-field--textarea edit-view-textfield">
-      <textarea class="mdc-text-field__input" type="text" id="uaqvbIDc5"></textarea>
+      <textarea class="mdc-text-field__input" type="text" id="uaqvbIDc5" [(ngModel)]="group.description"></textarea>
       <label class="mdc-floating-label" for="uaqvbIDc5">Description</label>
     </div>
 
