--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,17 @@
-@import "@material/fab/mdc-fab";
+@import '../../theme/ll-theme';
+@import '@material/fab/mdc-fab';
+@import '@material/card/mdc-card';
 
 .app-add-new-fab {
   bottom: 15px;
-  position: absolute;
+  position: fixed;
   right: 15px;
+}
+
+.mdc-card {
+  margin-bottom: 1rem;
+}
+
+.mdc-card__label {
+  padding: 1rem;
 }
