--- a/src/app/top-app-bar/top-app-bar.component.scss
+++ b/src/app/top-app-bar/top-app-bar.component.scss
@@ -1,2 +1,3 @@
-@import "@material/ripple/mdc-ripple";
-@import "@material/top-app-bar/mdc-top-app-bar";
+@import '../../theme/ll-theme';
+@import '@material/ripple/mdc-ripple';
+@import '@material/top-app-bar/mdc-top-app-bar';
