--- a/src/global.scss
+++ b/src/global.scss
@@ -12,3 +12,7 @@
 
 @import "@material/typography/mdc-typography";
 @import './app/top-app-bar/top-app-bar.component';
+
+body {
+  background-color: #e6e6e6;
+}
