Add/Edit Point pages

--- a/src/app/view-group/view-group.page.html
+++ b/src/app/view-group/view-group.page.html
@@ -1,7 +1,5 @@
 <app-top-app-bar [title]="group?.title" type="back" (navClick)="navigateBack()">
-  <button class="mdc-top-app-bar__action-item" (click)="editGroup()">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M14.06 9.02l.92.92L5.92 19H5v-.92l9.06-9.06M17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75z"/></svg>
-  </button>
+
 </app-top-app-bar>
 
 <ion-content>
@@ -34,20 +32,23 @@
       </div>
     </div>
 
-    <div [ngSwitch]="currenTab" class="tab-flex">
+    <div [ngSwitch]="currentTab" class="tab-flex">
       <div *ngSwitchCase="'map'" class="tab-flex">
         <app-map [points]="group?.points"></app-map>
       </div>
 
       <div *ngSwitchCase="'list'">
         <ul>
-          <li *ngFor="let point of group?.points">
-            {{ JSON.stringify(point) }}
+          <li *ngFor="let point of group?.points" (click)="editPoint(point.id)">
+            {{ point.title }}
           </li>
         </ul>
       </div>
     </div>
 
+    <button class="mdc-fab app-add-new-fab" (click)="addNewPoint()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+    </button>
   </div>
 
 </ion-content>
