--- a/src/app/edit-point/edit-point.page.html
+++ b/src/app/edit-point/edit-point.page.html
@@ -24,5 +24,24 @@
       <label class="mdc-floating-label" [ngClass]="{'mdc-floating-label--float-above': point?.description !== ''}" for="uaqvbIDc5">Description</label>
     </div>
 
+    <div class="slider-container">
+      <div>Radius (miles)</div>
+    <div class="mdc-slider mdc-slider--discrete" tabindex="0" role="slider"
+         aria-valuemin="0" aria-valuemax="10" [aria-valuenow]="point?.radius"
+         aria-label="Select Value">
+      <div class="mdc-slider__track-container">
+        <div class="mdc-slider__track"></div>
+      </div>
+      <div class="mdc-slider__thumb-container">
+        <div class="mdc-slider__pin">
+          <span class="mdc-slider__pin-value-marker"></span>
+        </div>
+        <svg class="mdc-slider__thumb" width="21" height="21">
+          <circle cx="10.5" cy="10.5" r="7.875"></circle>
+        </svg>
+        <div class="mdc-slider__focus-ring"></div>
+      </div>
+    </div>
+    </div>
   </div>
 </ion-content>
