--- a/src/app/edit-point/edit-point.page.html
+++ b/src/app/edit-point/edit-point.page.html
@@ -27,7 +27,7 @@
     <div class="slider-container">
       <div>Radius (miles)</div>
     <div class="mdc-slider mdc-slider--discrete" tabindex="0" role="slider"
-         aria-valuemin="0" aria-valuemax="10" [aria-valuenow]="point?.radius"
+         aria-valuemin="0" aria-valuemax="10" [attr.aria-valuenow]="point?.radius"
          aria-label="Select Value">
       <div class="mdc-slider__track-container">
         <div class="mdc-slider__track"></div>
