--- a/src/app/view-group/view-group.page.html
+++ b/src/app/view-group/view-group.page.html
@@ -33,14 +33,26 @@
     </div>
 
     <div [ngSwitch]="currentTab" class="tab-flex">
-      <div *ngSwitchCase="'map'" class="tab-flex">
-        <app-map [points]="group?.points"></app-map>
+
+      <div ng-if="group?.points >= 1" *ngSwitchCase="'map'" class="tab-flex">
+        <div ng-if="group?.points >= 1" >
+          <app-map [points]="group?.points"></app-map>
+        </div>
+        <div ng-if="group?.points == 0" class="group-empty-msg">
+          <h2 class="mdc-list-item__text">This group is empty</h2>
+          <p class="mdc-list-item__text">Save a pin and it will show up here. </p>
+        </div>
       </div>
 
       <div *ngSwitchCase="'list'">
         <ul class="mdc-list" aria-orientation="vertical">
-          <li class="mdc-list-item" *ngFor="let point of group?.points" (click)="editPoint(point.id)">
+          <li ng-if="group?.points >= 1" class="mdc-list-item" *ngFor="let point of group?.points" (click)="editPoint(point.id)">
             <span class="mdc-list-item__text">{{ point.title }}</span>
+            <span class="mdc-list-item__text">{{ point.description }}</span>
+          </li>
+          <li ng-if="group?.points == 0" class="group-empty-msg">
+            <h2 class="mdc-list-item__text">This group is empty</h2>
+            <p class="mdc-list-item__text">Save a pin and it will show up here. </p>
           </li>
         </ul>
       </div>
