final themeing type color icons

--- a/src/app/edit/edit-group.page.html
+++ b/src/app/edit/edit-group.page.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <div class="edit-view-container mdc-top-app-bar--fixed-adjust">
     <div class="edit-view-map">
-      <!--<app-map style="min-height: 200px;"></app-map>-->
+      <app-map style="min-height: 200px;"></app-map>
     </div>
     <div class="edit-view-content">
 
