--- a/src/theme/_ll-theme.scss
+++ b/src/theme/_ll-theme.scss
@@ -7,6 +7,7 @@ $mdc-theme-on-secondary: #000;
 
 $mdc-typography-styles-button: (
   font-size: 16px,
+  font-weight: 500,
   text-transform: none,
 );
 
